--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-iot-device-sdk": "^2.2.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.0.0",
